sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:10: error: not found: value ecart
ecart = (getNombreValeurs().toDouble / 2.0).toInt
^AlgShellSort:20: error: not found: value ecart
       while ((j>0)&&(!plusPetitQue(j-ecart,v)))
                                      ^AlgShellSort:22: error: not found: value ecart
          {copie(j-ecart,j); j=j-ecart}
                   ^AlgShellSort:22: error: not found: value ecart
          {copie(j-ecart,j); j=j-ecart}
                                 ^